# ddengine

./: CMakeLists.txt  README.md  build.bat  build.sh  ddengine.sublime-workspace  run.bat  run.sh
3rd/cmake/: freetype.cmake  glew.cmake  libpng.cmake  lua-cjson.cmake  lua.cmake  zlib.cmake
3rd/freetype/include/freetype/config/: ftoption.h
3rd/freetype/src/base/: ftver.aps
3rd/glew/: .gitignore  CMakeLists.txt
3rd/lua-cjson/: lua_cjson.c
cmake/: ddcl.cmake  ddengine-test.cmake  ddgl.cmake  lddcl.cmake  lddgl.cmake  ltexture.cmake
ddcl/: CMakeLists.txt  ddcl.c  ddcl.h  ddclconfig.h  ddclerr.c  ddclerr.h  ddclfile.c  ddclfile.h  ddcllog.c  ddcllog.h  ddclmalloc.c  ddclmalloc.h  ddclmap.c  ddclmap.h  ddclmsg.h  ddclservice.c  ddclservice.h  ddclsocket.c  ddclsocket.h  ddclsocketpoll.c  ddclsocketpoll.h  ddclstorage.c  ddclstorage.h  ddclthread.c  ddclthread.h  ddcltimer.c  ddcltimer.h  ddplatform.h
ddcl/bind/lib/: ddcl.lua  ddclfile.lua  ddclservice.lua  ddcltimer.lua
ddcl/bind/lua/: README.md
ddcl/bind/lua/src/: llex.c
ddcl/bind/src/: lcl.c  lcl.h  lfile.c  lservice.c  lthread.c  ltimer.c
ddcl/cmake/: ddcl.cmake  ddcl_luabind.cmake  ddcltest.cmake  lua.cmake
ddgl/: ddgl.c  ddgl.h  ddglconfig.h  ddglerr.c  ddglerr.h  ddglmaterial.c  ddglmaterial.h  ddglmath.c  ddglmath.h  ddglrender.c  ddglrender.h  ddglshader.c  ddglshader.h  ddglsprite.c  ddglsprite.h  ddgltexture.c  ddgltexture.h  ddglvertex.h  ddglwindow.c  ddglwindow.h
ddgl/2d/: ddglimage2d.c  ddglimage2d.h  ddglshape2d.c  ddglshape2d.h
ddgl/opengl/: ddglopengl.c  ddglopengl.h  ddglopengl_material.c  ddglopengl_material.h  ddglopengl_shader.c  ddglopengl_shader.h  ddglopengl_texture.c  ddglopengl_texture.h
ddgl/opengl/2d/: ddglopengl_image2d.c  ddglopengl_image2d.h  ddglopengl_shape2d.c  ddglopengl_shape2d.h
ddgl/opengl/platform/: ddglopengl_win32.c
example/cmake/: simple-gl.cmake  simple-httpd.cmake
example/simple-gl/: agent.lua  main.c  main.lua
example/simple-httpd/: agent.lua  main.lua  simple-httpd-main.c
lddcl/: lcl.c  lcl.h  lfile.c  lservice.c  lservice.h  lsocket.c  lthread.c
lddgl/: lgl.c  lgl.h  lmath.c  lopengl.c  lrender.c  lwindow.c
ltexture/: ltexture.c  ltexture.h
lualib/: http.lua  y.lua
lualib/gl/: sprite.lua
test/: main.c  t_file.c  t_map.c  t_service.c  t_socket.c
test/lua/: mainsvr.lua  t.lua
